# sr2

./: .gitignore  .gitmodules  CREDITS  Makefile  README.md  SR2Config.h  SR2Config.h.in  aiTypes.hpp  basicFleet.cpp  basicShipAI.cpp  basicShipAI.hpp  battle.c  battle.h  battleTypes.h  bench.sh  benchmark.sh  bineuralFleet.cpp  bobFleet.c  bobFleet.cpp  bundleFleet.cpp  circleFleet.cpp  cloudFleet.c  compile.sh  config.doxygen  configure  cowardFleet.c  cowardFleet.cpp  debug.sh  display.c  display.h  display.sh  displayTypes.h  displayUtil.c  displayUtil.h  dummyFleet.c  evolve.sh  fighterFleet.c  fleet.c  fleet.h  fleetConfig.c  (+56 more)
.github/workflows/: c-cpp.yml
art/: combine.sh
fleetData/: bineural1.config  bineural2.config  bineural3.config  bineural4.config  bineural5.config  matrix1.config  neural1.config  neural10.config  neural11.config  neural12.config  neural13.config  neural14.config  neural2.config  neural3.config  neural4.config  neural5.config  neural6.config  neural7.config  neural8.config  neural9.config
scenarios/: default.sc  extraLarge.sc  fast.sc  fighters.sc  large.sc  singleFighter.sc
subprojects/: MBLib.wrap
